# docker-yocto-kirkstone-nuc

./: .gitignore  .gitmodules  CLAUDE.md  GIT_COMMIT_RULE.md  README.md  build.sh  clean.sh  connect.sh  deploy-bundle.sh  deploy_dashboard.sh  dlt-receive.sh  download.sh  flash.sh  rauc-remote-control.sh  report.sh  run-docker.sh  send_bundle.sh
kirkstone/local/dashboard/: .gitignore  CARD_STYLE_GUIDE.md  CMakeLists.txt  CODE_SEPARATION_GUIDE.md  README.md  build.sh  deploy.sh  dlt-receive.sh  eglfs_kms_config.json  main.qml  oe-logs  oe-workdir  systeminfo.h
kirkstone/local/dashboard/qml/: Card01.qml  Card02.qml  Card03.qml  Card04.qml  Card05.qml  Card06.qml  Card07.qml  Card08.qml  Card09.qml  Card10.qml  Card11.qml  Card12.qml  Card13.qml  Card14.qml  Card15.qml  Card16.qml  Card17.qml  Card18.qml  Card19.qml  Card20.qml  Card21.qml  Card22.qml  Card23.qml  Card24.qml  Card25.qml  Card26.qml  Card27.qml  Card28.qml  Card29.qml  Card30.qml  CardInfoRow.qml  DashboardCard.qml  DashboardCard00.qml  DashboardCard01.qml  DashboardCard02.qml  DashboardCard03.qml  DashboardCard10.qml  DashboardCard12.qml  DashboardCard23.qml  DashboardCard40.qml  (+10 more)
kirkstone/local/dashboard/resources/: dashboard_resources.qrc
kirkstone/local/dashboard/services/: dashboard-eglfs.service  dashboard.service
kirkstone/local/dashboard/src/: grub_manager.cpp  grub_manager.h  main.cpp  rauc_manager.cpp  rauc_manager.h  rauc_system_manager.cpp  rauc_system_manager.h  system_info.cpp  system_info.h  update_agent_manager.cpp  update_agent_manager.h
kirkstone/local/rauc-hawkbit-cpp/: .gitignore  BUILD_STATUS.md  CLAUDE.md  CMakeLists.txt  README.md  build.sh  deploy.sh  dlt-receive.sh  oe-logs  oe-workdir
kirkstone/local/rauc-hawkbit-cpp/services/: rauc-hawkbit-cpp.service
kirkstone/local/rauc-hawkbit-cpp/src/: config.h  hawkbit_client.cpp  hawkbit_client.h  main.cpp  rauc_client.cpp  rauc_client.h
kirkstone/local/service_app/: CMakeLists.txt  README.md  deploy.sh  dlt-receive.sh  oe-logs  oe-workdir
kirkstone/local/service_app/services/: service_app.service
kirkstone/local/service_app/src/: main.cpp
kirkstone/local/update-agent/: .gitignore  BUILD_INSTRUCTIONS.md  CLAUDE.md  CMakeLists.txt  IMPLEMENTATION_SUMMARY.md  README.md  build.sh  deploy.sh  test.sh
kirkstone/local/update-agent/docs/: architecture.md
kirkstone/local/update-agent/include/: legacy_engine.h  rauc_engine.h  update_client.h  update_types.h
kirkstone/local/update-agent/services/: update-agent.service
kirkstone/local/update-agent/src/: agent.cpp  agent.h  config.h  legacy_engine.cpp  main.cpp  package_installer.cpp  package_installer.h  rauc_engine.cpp  server_agent.cpp  server_agent.h  service_agent.cpp  service_agent.h  update_agent.cpp  update_client.cpp  update_client.h  updater.cpp  updater.h
kirkstone/local/update-agent/tests/: CMakeLists.txt  GOOGLE_TEST_IMPLEMENTATION.md  TESTING.md  main.cpp  test_config.cpp  test_integration.cpp  test_mocked_only.cpp  test_server_agent.cpp  test_server_agent_mocked.cpp  test_service_agent.cpp  test_service_agent_mocked.cpp
kirkstone/local/update-library/: CMakeLists.txt  IMPLEMENTATION_PLAN.md  README.md  UPDATE_LIBRARY_PRD.md  build.sh  deploy.sh  update-test-app.c
kirkstone/local/update-library/include/: rauc_engine.h  update_client.h  update_types.h
kirkstone/local/update-library/src/: rauc_engine.cpp  update_client.cpp
kirkstone/local/update-library/test/: test_main.cpp
kirkstone/local/update-service/: .gitignore  CMakeLists.txt  README.md  build.sh  deploy.sh  dlt-receive.sh  oe-logs  oe-workdir  verify.sh
kirkstone/local/update-service/dbus-service/: org.freedesktop.UpdateService.conf  org.freedesktop.UpdateService.service
kirkstone/local/update-service/services/: update-service.service
kirkstone/local/update-service/src/: main.cpp  org.freedesktop.UpdateService.xml  update_service.cpp  update_service.h
kirkstone/local/update-service/test/: test_client.cpp
tools/bundler/: .gitignore  CMakeLists.txt  README.md  create-bundle.sh  create-ext4-and-bundle.sh  create-rauc-bundle.sh  deploy-bundle.sh
tools/bundler/backup/: create-bundle.sh  create-nuc-bundle.sh
tools/bundler/docs/: rauc-bundle-guide.md
tools/bundler/files/: create-example-keys.sh  rauc-bundle-manual.sh
tools/bundler/scripts/: rauc-bundle-manual.sh
tools/bundler/src/: bundler.c
tools/hawkbit-server/: IMPLEMENTATION_SUMMARY.md  README.md  config.py  pyproject.toml  server.sh  test_client.py
tools/hawkbit-server/hawkbit_server/: __init__.py  main.py  models.py  storage.py
tools/updater/: .gitignore  IMPLEMENTATION_SUMMARY.md  MANIFEST.in  README.md  REFACTORING_GUIDE.md  build-deb.sh  build.sh  demo.sh  generate_certs.sh  gui_python.py  install-user.sh  install.sh  launch-gui.sh  main.py  pyproject.toml  quick-install.sh  rauc_test_complete.sh  requirements.txt  run-dbus-gui.sh  run.sh  server.sh  setup.py  test-gui.py  test_rauc_auto.sh  updater.py  web_gui.py
tools/updater/certs/: ca.crt  ca.key  ca.srl  server.crt  server.key
tools/updater/debian/: arcro.desktop  changelog  control  copyright  install  rauc-updater.desktop  rauc-updater.install  rules
tools/updater/docs/: GUI.md  PRD.md  USAGE.md
tools/updater/gui/: CMakeLists.txt  __init__.py  app.py  backend.py  bundle_manager.py
tools/updater/gui/qml/: AddDeploymentDialog.qml  DeploymentItem.qml  bundleinfo.qml  main.qml  qmldir  serverlogviewer.qml
tools/updater/gui/src/: main.cpp  updatermanager.h
tools/updater/image/: nuc-image-qt5-bundle-intel-corei7-64.raucb
tools/updater/scripts/: create_deployment.py  disable_deployment.py  install_deps.sh  test_client.py  test_refactored.py
tools/updater/server/: __init__.py  config.py  exceptions.py  main.py  main_refactored.py  models.py
tools/updater/server/api/: routes.py
tools/updater/server/services/: __init__.py  (+2 more)
tools/updater/src/: cli.py
tools/updater/tests/: test-main.py  test-simple.py  test_batch.sh
tools/updater/updater_server/: config.py  main.py  main_refactored.py  storage.py
updater/rauc-updater/: README.md  main.py  pyproject.toml
(+274 files in other folders)
