[project]
name = "rauc-updater"
version = "0.1.0"
description = "RAUC Update Tool with Qt6 QML GUI"
authors = [
    {name = "RAUC Updater Team", email = "support@example.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
keywords = ["rauc", "ota", "embedded", "update"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "paramiko>=3.0.0",
    "click>=8.0.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
gui = [
    "PySide6>=6.5.0",
    "PySide6-Addons>=6.5.0",
]
advanced = [
    "babel>=2.12.0",
    "watchdog>=3.0.0",
    "keyring>=24.0.0",
]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]

[project.scripts]
rauc-updater = "rauc_updater.cli:main"
rauc-updater-gui = "rauc_updater.gui:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rauc_updater"]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.9"
strict = true

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
